--- a/minko-app/src/app/auth/login/login.component.html
+++ b/minko-app/src/app/auth/login/login.component.html
@@ -7,7 +7,6 @@
         </p>
 
         <p class="field field-icon">
-            <label for="email"><span><i class="fas fa-envelope"></i></span></label>
             <input formControlName="email" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
         </p>
         <ng-container *ngIf="loginFormGroup.controls['email'].touched && loginFormGroup.controls['email'].invalid">
@@ -21,7 +20,6 @@
         </ng-container>
 
         <p class="field field-icon">
-            <label for="password"><span><i class="fas fa-lock"></i></span></label>
             <input formControlName="password" type="password" name="password" id="password" placeholder="******">
         </p>
 
@@ -35,13 +33,10 @@
             </p>
         </ng-container>
 
-        <!-- <div>
-            IsLoginPending: {{(isLoginPending$ | async)}}
-        </div> -->
         <button [disabled]="(isLoginPending$ | async)" (click)="loginHandler()">Login</button>
 
         <p class="text-center">
-            Have an account?
+            You don't have an account?
             <a routerLink="/user/register">Register</a>
         </p>
 
