--- a/minko-app/src/app/auth/register/register.component.html
+++ b/minko-app/src/app/auth/register/register.component.html
@@ -5,7 +5,6 @@
 
         <!-- username -->
         <p class="field field-icon">
-            <label for="username"><span><i class="fas fa-user"></i></span></label>
             <input formControlName="username"
                 [class.input-error]="registerFormGroup.controls['username'].touched && registerFormGroup.controls['username'].invalid"
                 type="text" name="username" id="username" placeholder="Johny">
@@ -26,7 +25,6 @@
 
         <!-- email -->
         <p class="field field-icon">
-            <label for="email"><span><i class="fas fa-envelope"></i></span></label>
             <input formControlName="email" type="email" name="email" id="email" placeholder="john.doe@gmail.com"
                 [class.input-error]="shouldShowErrorForControl('email')">
         </p>
@@ -44,7 +42,6 @@
 
         <!-- telephone -->
         <p class="field field-icon">
-            <label for="tel"><span><i class="fas fa-phone"></i></span></label>
             <select name="select-tel" id="select-tel" class="tel" formControlName="telRegion">
                 <option value="00359">+359</option>
             </select>
@@ -55,7 +52,6 @@
 
         <div formGroupName="passwords">
             <p class="field field-icon">
-                <label for="password"><span><i class="fas fa-lock"></i></span></label>
                 <input [class.input-error]="shouldShowErrorForControl('password', passwordsGroup)" formControlName="password" type="password" name="password" id="password" placeholder="******">
             </p>
             
@@ -71,7 +67,6 @@
 
             <!-- rePassword -->
             <p class="field field-icon">
-                <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
                 <input formControlName="rePassword" type="password" name="rePassword" id="rePassword"
                     placeholder="******">
             </p>
@@ -84,7 +79,7 @@
         <button [disabled]="registerFormGroup.invalid">Create Account</button>
 
         <p class="text-center">
-            Have an account?
+            You already have an account?
             <a routerLink="/user/login">Log In</a>
         </p>
 
