--- a/minko-app/src/app/auth/login/login.component.html
+++ b/minko-app/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
         </p>
 
         <p class="field field-icon">
-            <input formControlName="email" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
+            <input formControlName="email" type="email" name="email" id="email" placeholder="john.smith@gmail.com">
         </p>
         <ng-container *ngIf="loginFormGroup.controls['email'].touched && loginFormGroup.controls['email'].invalid">
             <p *ngIf="loginFormGroup.controls['email'].errors.required" class="error">
