--- a/minko-app/src/app/feature/themes/theme-list/theme-list.component.html
+++ b/minko-app/src/app/feature/themes/theme-list/theme-list.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="themeList">
   <app-theme-list-item *ngFor="let theme of themeList" [theme]="theme"></app-theme-list-item>
-  <div *ngIf="themeList.length === 0">{{localize('no-themes-message', l10n)}}</div>
+  <div *ngIf="themeList.length === 0">No themes!</div>
 </div>
 <div *ngIf="!themeList">
   Loading...
